// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AttachmentManager store reducer when undefined adds an image preview 1`] = `
Object {
  "file": Array [],
  "image": Array [],
}
`;

exports[`AttachmentManager store reducer when undefined removes an image preview 1`] = `
Object {
  "file": Array [],
  "image": Array [],
  "imagePreviews": Array [
    "a.png",
    "b.png",
    "c.png",
  ],
}
`;

exports[`AttachmentManager store reducer when undefined sets image previews 1`] = `
Object {
  "file": Array [],
  "image": Array [],
}
`;

exports[`AttachmentManager store reducer when undefined switches two image previews 1`] = `
Object {
  "file": Array [],
  "image": Array [],
  "imagePreviews": Array [
    "a.png",
    "b.png",
    "c.png",
  ],
}
`;
